--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ site.author }}">
   <meta name="baidu-site-verification" content="code-f4PNwnWZUy">
+  <meta name="google-site-verification" content="ENqdqNzyR1rXJBhmEVbfVci_Jji5Sm7tP4tbK6hhOcY">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <title>{% if page.title %}{{ page.title | append: " | " | append: site.title }}{% else %}{{ site.title }}{% endif %}</title>
