--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -10,6 +10,21 @@
 		  {% endif %}
         </div>
       </div>
+     
+      
+      <hr/><h2><div class="section-heading text-uppercase"><font color="#FF0000"> {{ "News：" | markdownify }}</div></h2>
+                {% for papers in site.data.sitetext[site.locale].papers.list_news %}
+       <div class="item">
+            {% if papers.title %}
+	          <p align="left">
+                <font size="4"><b>{{ papers.title }}</b></font>
+            </p>
+            {% endif %}
+      </div>
+          {% endfor %}
+
+
+
 	  
       <hr/><h2><div class="section-heading text-uppercase">{{ "团队近期代表性顶级期刊论文：" | markdownify }}</div></h2>
 	  {% for papers in site.data.sitetext[site.locale].papers.list_journal %}
