--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -12,7 +12,7 @@
       </div>
      
       
-      <hr/><h2><div class="section-heading text-uppercase"><font color="#FF0000"> {{ "News：" | markdownify }}</div></h2>
+      <hr/><h2><div class="section-heading text-uppercase"><font color="#FF0000"> {{ "News：" | markdownify }}</font></div></h2>
                 {% for papers in site.data.sitetext[site.locale].papers.list_news %}
        <div class="item">
             {% if papers.title %}
