--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,9 @@ layout: default
 {% include navheader.html %}
 
 {% include researches.html %}
+
+{% include paper_news.html %}
+
 {% include paper.html %}
 {% include news.html %}
 {% include timeline.html %}
