--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% include navheader.html %}
 
 {% include researches.html %}
-{% include paper_news.html %}
+{% include notices.html %}
 {% include paper.html %}
 {% include news.html %}
 {% include timeline.html %}
