--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -17,14 +17,15 @@
           <div class="item">
             {% if papers.title %}
 	          <p align="left">
-                <font size="4"><b>{{ papers.title }}</b></font>
+                <font size="4"><b>{{ pap
+                    ers.title }}</b></font>
             </p>
       {% endif %}
       </div>
       {% endfor %} -->
 
 
-      <br><hr/><h2><div class="section-heading text-uppercase">{{ "Selected Conference Paper：" | markdownify }}</div></h2>
+      <br><hr/><h2><div class="section-heading text-uppercase">{{ "团队近期代表性顶级会议论文：" | markdownify }}</div></h2>
       {% for papers in site.data.sitetext[site.locale].papers.list_conference %}
         <div class="item">
             {% if papers.title %}
@@ -52,13 +53,14 @@
             <p align="left">
                 <!-- <font color="#336199"><font size="3">{{ <a href=papers.url>"pdf"</a> }}</font></font> -->
                 <a href="{{ papers.url }}">pdf</a>
+                <a href="{{ papers.sitemap }}">sitemap</a>
             </p>
             {% endif %}
         </div>       
 	  {% endfor %}
 
 	  
-      <hr/><h2><div class="section-heading text-uppercase">{{ "Selected Journal Papers" | markdownify }}</div></h2>
+      <hr/><h2><div class="section-heading text-uppercase">{{ "团队近期代表性顶级期刊论文：" | markdownify }}</div></h2>
 	  {% for papers in site.data.sitetext[site.locale].papers.list_journal %}
         <div class="item">
             {% if papers.title %}
